--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -5,10 +5,10 @@
     
     <!-- Banner -->
     <section id="banner">
-        <h2>What's the fequency, Kenneth?</h2>
+        <h2>{{title}}</h2>
         <p>Lyric Word Frequencies</p>
         <p>Drop in a URL from that big metropolitan lyrics website.</p>
-        <ul class="actions">
+        <ul class="select-wrapper">
             <li>
                 <form action="/freq">
                     <input type="text" name="link" class="textarea" value="{{{linkPreload}}}"><br>
