--- a/src/main/resources/templates/error.hbs
+++ b/src/main/resources/templates/error.hbs
@@ -5,7 +5,7 @@
     
     <!-- Banner -->
     <section id="banner">
-        <h2>What's the fequency, Kenneth?</h2>
+        <h2>{{title}}</h2>
         <p>Lyric Word Frequencies</p>
         <p>Drop in a URL from that big metropolitan lyrics website.</p>
         <ul class="actions">
